# simplicity-dex

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Guide.md  Readme.md  example.config.toml
.simplicity-dex.example/: .simplicity-dex.config.toml
crates/cli-client/: Cargo.toml  esplora-api.md
crates/cli-client/src/: config.rs  error.rs  explorer.rs  fee.rs  lib.rs  logger.rs  logging.rs  main.rs  metadata.rs  signing.rs  sync.rs  wallet.rs
crates/cli-client/src/cli/: basic.rs  browse.rs  commands.rs  helper.rs  interactive.rs  mod.rs  option.rs  option_offer.rs  positions.rs  processor.rs  swap.rs  sync.rs  tables.rs  taker.rs  tx.rs  wallet.rs
crates/cli-client/src/common/: store.rs
crates/cli-client/src/contract_handlers/: address.rs  common.rs  faucet.rs  maker_init.rs  maker_settlement.rs  oracle_signature.rs  taker_early_termination.rs  taker_funding.rs  taker_settlement.rs
crates/coin-store/: Cargo.toml
crates/coin-store/benches/: benchmark.rs  common.rs  contracts.rs  default.rs  entropy.rs  token.rs
crates/coin-store/migrations/: 001_initial.sql
crates/coin-store/src/: entry.rs  error.rs  executor.rs  filter.rs  lib.rs  store.rs
crates/dex-cli/: Cargo.toml
crates/dex-cli/src/cli/: dex.rs  helper.rs  maker.rs
crates/dex-cli/src/common/: config.rs  keys.rs  settings.rs  types.rs  utils.rs
crates/dex-cli/src/contract_handlers/: maker_funding.rs  maker_termination_collateral.rs  maker_termination_settlement.rs  merge_tokens.rs  mod.rs  split_utxo.rs
crates/dex-nostr-relay/: Cargo.toml
crates/dex-nostr-relay/src/: error.rs  relay_client.rs  relay_processor.rs  types.rs
crates/dex-nostr-relay/src/handlers/: common.rs  get_events.rs  list_orders.rs  order_replies.rs  place_order.rs  reply_order.rs
crates/dex-nostr-relay/tests/: test_order_placing.rs
crates/options-relay/: Cargo.toml  README.md
crates/options-relay/src/: client.rs  config.rs  error.rs  lib.rs
crates/options-relay/src/client/: publishing.rs  read_only.rs
crates/options-relay/src/events/: action_completed.rs  filters.rs  kinds.rs  mod.rs  option_created.rs  option_offer_created.rs  swap_created.rs
crates/signer/: Cargo.toml
crates/signer/src/: lib.rs
