[workspace]
resolver = "3"
members = [
    "crates/*"
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.91.0"
authors = ["Blockstream"]
readme = "README.md"
repository = "https://github.com/Blockstream/simplicity-dex"
keywords = ["liquid", "bitcoin", "options", "simplicity"]
categories = ["cryptography::cryptocurrencies"]

[workspace.dependencies]
anyhow = { version = "1.0.100" }

tracing = { version = "0.1.41" }

contracts = { git = "https://github.com/BlockstreamResearch/simplicity-contracts.git", rev = "d58e2f1", package = "contracts" }
cli-helper = { git = "https://github.com/BlockstreamResearch/simplicity-contracts.git", rev = "d58e2f1", package = "cli" }
simplicityhl-core = { version = "0.3.1", features = ["encoding"] }

simplicityhl = { version = "0.4.0" }
