[package]
name = "coin-store"
description = "SQLite-based UTXO and blinding key storage"
license = "MIT OR Apache-2.0"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
simplicityhl = { workspace = true }

futures = "0.3"

thiserror = "2"

tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
