[package]
name = "coin-store"
description = "SQLite-based UTXO and blinding key storage"
license = "MIT OR Apache-2.0"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
simplicityhl = { workspace = true }
contracts = { workspace = true }

simplicityhl-core = { workspace = true }

sha2 = { version = "0.10.9" }

futures = { version = "0.3" }

thiserror = { version = "2" }

async-trait = { version = "0.1.89" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }

bincode = { version = "2.0.1", features = ["alloc", "derive", "serde"] }

[dev-dependencies]
hex = { version = "0.4.3" }
criterion = { version = "0.5", features = ["async_tokio"] }
tokio = { version = "1", features = ["full"] }

[[bench]]
name = "default"   
harness = false

[[bench]]
name = "entropy"   
harness = false

[[bench]]
name = "contracts"   
harness = false

[[bench]]
name = "token"   
harness = false