[package]
name = "signer"
description = "Simple Schnorr signer for Liquid transactions"
license = "MIT OR Apache-2.0"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
thiserror = "2"

hex = "0.4"

simplicityhl = { workspace = true }
simplicityhl-core = { workspace = true }
